# vectrust

./: .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  PRD.md  README.md  TODO.md
.github/workflows/: ci.yml
benchmarks/: README.md  USAGE.md  benchmark_summary.md  test_current.sh
benchmarks/nodejs/: benchmark-suite.js  index.js  package.json  test-data.js
benchmarks/results/: performance_comparison_20250919_205551.md
benchmarks/rust/: Cargo.toml
benchmarks/rust/src/: benchmark_suite.rs  debug_test.rs  find_bottleneck.rs  isolate_issue.rs  main.rs  profile_components.rs  profile_detailed.rs  profile_insert.rs  real_world.rs  simple_benchmark.rs  test_3000_only.rs  test_batch_sizes.rs  test_data.rs  test_deadlock.rs  test_lock_overhead.rs  test_mmap_only.rs  test_rocksdb_only.rs  test_timing.rs  test_with_error_check.rs
benchmarks/scripts/: compare_results.py  quick_test.sh  run_all.sh
crates/vectrust/: Cargo.toml
crates/vectrust-cli/: Cargo.toml
crates/vectrust-cli/src/: main.rs
crates/vectrust-core/: Cargo.toml
crates/vectrust-core/src/: error.rs  graph.rs  index.rs  item.rs  lib.rs  types.rs  vector_ops.rs
crates/vectrust-cypher/: Cargo.toml
crates/vectrust-cypher/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs
crates/vectrust-graph/: Cargo.toml
crates/vectrust-graph/src/: executor.rs  lib.rs  storage.rs
crates/vectrust-index/: Cargo.toml
crates/vectrust-index/src/: flat.rs  hnsw.rs  lib.rs  quantized.rs
crates/vectrust-node/: Cargo.toml  build.rs  index.d.ts  index.js  package.json
crates/vectrust-node/src/: lib.rs
crates/vectrust-node/test/: comprehensive-test.js  test.js
crates/vectrust-query/: Cargo.toml
crates/vectrust-query/src/: filter.rs  hybrid.rs  lib.rs  search.rs
crates/vectrust-storage/: Cargo.toml
crates/vectrust-storage/src/: backend.rs  legacy.rs  lib.rs  lock.rs  optimized.rs  wal.rs
crates/vectrust/src/: graph_index.rs  lib.rs
docs/: migration-guide.md
examples/: Cargo.toml  basic.rs  graph.rs
tests/: Cargo.toml
tests/integration/: basic_test.rs  bench_test.rs  graph_test.rs  mod.rs
