[workspace]
members = [
    "crates/vectrust-core",
    "crates/vectrust-storage",
    "crates/vectrust-index",
    "crates/vectrust-query",
    "crates/vectrust",
    "crates/vectrust-cli",
    "examples",
    "tests",
    "crates/vectrust-node",
]
exclude = [
    "benchmarks/rust",
    "benchmarks/nodejs"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Vectrust Contributors"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/anvanster/vectrust"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Storage
rocksdb = "0.21"
bincode = "1.3"
blake3 = "1.5"
fs2 = "0.4"

# Math/Vector
ndarray = "0.15"
nalgebra = "0.32"

# Index - using more common crates
instant-distance = "0.6"

# Testing
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tempfile = "3.8"