[package]
name = "vectrust-benchmarks"
version = "0.1.0"
edition = "2021"
default-run = "benchmark_runner"

[dependencies]
vectrust = { path = "../../crates/vectrust" }
tokio = { version = "1.35", features = ["full"] }
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4"] }
rand = "0.8"
tempfile = "3.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
anyhow = "1.0"
rocksdb = "0.21"
memmap2 = "0.5"

# Benchmark files would go in benches/ directory
# [[bench]]
# name = "example_benchmark"
# harness = false

[[bin]]
name = "benchmark_runner"
path = "src/main.rs"

[[bin]]
name = "debug_test"
path = "src/debug_test.rs"

[[bin]]
name = "test_deadlock"
path = "src/test_deadlock.rs"

[[bin]]
name = "test_batch_sizes"
path = "src/test_batch_sizes.rs"

[[bin]]
name = "test_with_error_check"
path = "src/test_with_error_check.rs"

[[bin]]
name = "test_3000_only"
path = "src/test_3000_only.rs"

[[bin]]
name = "profile_insert"
path = "src/profile_insert.rs"

[[bin]]
name = "find_bottleneck"
path = "src/find_bottleneck.rs"

[[bin]]
name = "test_rocksdb_only"
path = "src/test_rocksdb_only.rs"

[[bin]]
name = "test_mmap_only"
path = "src/test_mmap_only.rs"

[[bin]]
name = "test_timing"
path = "src/test_timing.rs"