[package]
name = "vectrust-benchmarks"
version = "0.1.0"
edition = "2021"
default-run = "benchmark_runner"

[dependencies]
vectrust = { path = "../../crates/vectrust" }
tokio = { version = "1.35", features = ["full"] }
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4"] }
rand = "0.8"
tempfile = "3.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
anyhow = "1.0"
rocksdb = "0.21"
memmap2 = "0.5"

# Benchmark files would go in benches/ directory
# [[bench]]
# name = "example_benchmark"
# harness = false

[[bin]]
name = "benchmark_runner"
path = "src/main.rs"

