[package]
name = "vectrust-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for the vectrust vector database"

[[bin]]
name = "vectrust"
path = "src/main.rs"

[dependencies]
vectrust-core = { version = "0.1.3", path = "../vectrust-core" }
vectrust-storage = { version = "0.1.3", path = "../vectrust-storage" }
vectrust-index = { version = "0.1.3", path = "../vectrust-index" }
vectrust-query = { version = "0.1.3", path = "../vectrust-query" }
clap = { version = "4.4", features = ["derive"] }
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"