[package]
name = "vectrust-index"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vectrust-core = { path = "../vectrust-core" }
vectrust-storage = { path = "../vectrust-storage" }
ndarray.workspace = true
nalgebra.workspace = true
instant-distance.workspace = true
rayon = "1.8"
dashmap = "5.5"
ahash = "0.8"
uuid = "1.6"
rand = "0.8"

[dev-dependencies]
criterion.workspace = true