[package]
name = "vectrust-node"
version = "0.1.4"
authors = ["Andrey Vasilevsky", "Vectrust Contributors"]
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
vectrust = { version = "0.1.4", path = "../vectrust" }
napi = { version = "2.14", features = ["async", "tokio_rt"] }
napi-derive = "2.14"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
napi-build = "2.1"