[package]
name = "vectrust-query"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vectrust-core = { path = "../vectrust-core" }
vectrust-storage = { path = "../vectrust-storage" }
vectrust-index = { path = "../vectrust-index" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
regex = "1.10"

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true