[package]
name = "vectrust-query"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Query engine for the vectrust vector database"

[dependencies]
vectrust-core = { version = "0.1.3", path = "../vectrust-core" }
vectrust-storage = { version = "0.1.3", path = "../vectrust-storage" }
vectrust-index = { version = "0.1.3", path = "../vectrust-index" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
regex = "1.10"

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true