[package]
name = "vectrust-storage"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vectrust-core = { path = "../vectrust-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rocksdb.workspace = true
bincode.workspace = true
blake3.workspace = true
fs2.workspace = true
memmap2 = "0.9"
lz4 = "1.24"
crossbeam = "0.8"
async-trait = "0.1"
uuid = "1.6"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
criterion.workspace = true