[package]
name = "vectrust"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "High-performance local vector database with HNSW indexing"

[dependencies]
vectrust-core = { path = "../vectrust-core" }
vectrust-storage = { path = "../vectrust-storage" }
vectrust-index = { path = "../vectrust-index" }
vectrust-query = { path = "../vectrust-query" }
tokio = { version = "1.35", features = ["full"] }
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.8"