[package]
name = "vectrust"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance local vector database with HNSW indexing"

[dependencies]
vectrust-core = { version = "0.1.4", path = "../vectrust-core" }
vectrust-storage = { version = "0.1.4", path = "../vectrust-storage" }
vectrust-index = { version = "0.1.4", path = "../vectrust-index" }
vectrust-query = { version = "0.1.4", path = "../vectrust-query" }
vectrust-cypher = { version = "0.1.4", path = "../vectrust-cypher" }
vectrust-graph = { version = "0.1.4", path = "../vectrust-graph" }
rocksdb.workspace = true
tokio = { version = "1.35", features = ["full"] }
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.8"